# online-gantt

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  docker-compose.yml  entrypoint.sh  example.env  manage.py  pyproject.toml
docker/nginx/: Dockerfile  nginx.conf
gantt/: asgi.py  settings.py  urls.py  wsgi.py
gantt_chart/: apps.py  constants.py  managers.py  serializers.py  signals.py  urls.py  utils.py
gantt_chart/admin/: __init__.py  event.py  project.py
gantt_chart/forms/: __init__.py  dynamic.py
gantt_chart/management/commands/: create_admin_user.py
gantt_chart/migrations/: 0001_initial.py  0002_project_update_percentage_completion.py  0003_alter_project_update_percentage_completion.py
gantt_chart/models/: __init__.py  common.py  event.py  mixins.py  project.py
gantt_chart/permissions/: __init__.py  permissions.py  utils.py
gantt_chart/service/: event.py  exceptions.py
gantt_chart/static/: functions.js
gantt_chart/templates/gantt_chart/: event_links.html  events.html  project.html  project_item.html  project_participants.html
gantt_chart/templatetags/: custom_filters.py
gantt_chart/views/: __init__.py  errors.py  event.py  mixins.py  project.py
templates/: base.html  chart.html  create_or_update_element.html  delete_element.html  index.html  nav.html  universal_comments.html
templates/misc/: 400.html  403.html  404.html  500.html  error_base.html
templates/registration/: logged_out.html  login.html
